# csv_parser_01

./: .gitignore  README.md  pyproject.toml  ruff.toml
src/: data.py  helpers.py  main.py  types_data.py
